# vcpkg-wxwidgets-cmake-bootstrap

./: CMakeLists.txt  main.cpp  vcpkg.json
